[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "scenographer"
version = "0.1.0"
description = "The cool dude who sets up the stage. Word."
authors = ["Xavier Francisco <xavier@zyper.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy_utils = "^0.36.8"
sqlalchemy-postgres-copy = "^0.5.0"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.5"
networkx = "^2.5"
docopt = "^0.6.2"
loguru = "^0.5.1"
pyrsistent = "^0.16.0"
matplotlib = "^3.1.2"
commentjson = "^0.8.3"
dict-digger = "^0.2.1"

[tool.poetry.dev-dependencies]
ipython = "^7.10.1"
pdoc3 = "^0.7.2"
pre-commit = "^1.20.0"
pylint = "^2.6.0"
pytest = "^5.3.1"
isort = "^5.4.2"
black = "^19.10b0"
flake8 = "^3.8.3"

[tool.poetry.scripts]
scenographer = "scenographer.cli:cli"
